--- a/components/CardGroup/src/_mixin.scss
+++ b/components/CardGroup/src/_mixin.scss
@@ -7,18 +7,16 @@
 @mixin denhaag-card-group {
   --denhaag-card-group-distanced: 0;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: var(--_denhaag-card-group-responsive-gap, var(--denhaag-card-group-gap));
   margin-block-start: calc(var(--denhaag-card-group-distanced) * var(--denhaag-card-group-margin-block));
   margin-block-end: calc(var(--denhaag-card-group-distanced) * var(--denhaag-card-group-margin-block));
   margin-inline-start: calc(var(--denhaag-card-group-distanced) * var(--denhaag-card-group-margin-inline));
   margin-inline-end: calc(var(--denhaag-card-group-distanced) * var(--denhaag-card-group-margin-inline));
-}
 
-@mixin denhaag-card-group-row {
-  flex-direction: row;
-  flex-wrap: wrap;
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @mixin denhaag-card-group-distanced {
